Spacing correction for redeability and fixing styles

--- a/src/Root.module.css
+++ b/src/Root.module.css
@@ -1,5 +1,4 @@
 .container {
   display: grid;
   grid-template-rows: 100px 1fr 400px;
-  margin: auto;
 }
